; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/extr_cc_pal.c_spi_Read.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/extr_cc_pal.c_spi_Read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_SpiFd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spi_Read(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 1
  br i1 %9, label %13, label %10

10:                                               ; preds = %3
  %11 = load i32, i32* @g_SpiFd, align 4
  %12 = icmp ne i32 %11, 1
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %3
  store i32 -1, i32* %4, align 4
  br label %18

14:                                               ; preds = %10
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @spi_Read_CPU(i8* %15, i32 %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %14, %13
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @spi_Read_CPU(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
